# timelapse-builder

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
scripts/: fetch-ffmpeg.sh  package.sh
src/: build.rs  cli.rs  collect.rs  decode.rs  demosaic.wgsl  encode.rs  ffmpeg.rs  gpu.rs  gui.rs  lib.rs  main.rs
tests/: cancel.rs
