[package]
name = "timelapse-builder"
version = "0.1.0"
edition = "2021"
description = "Blazingly fast timelapse builder from PNG/JPG/WebP/RAW stills"
license = "MIT"

[[bin]]
name = "timelapse"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rayon = "1.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
rawler = "0.7"
walkdir = "2.5"
indicatif = "0.17"

[features]
embed-ffmpeg = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
